[package]
name = "lustre_lib"
version = "0.1.0"
authors = ["luismalheiro <luismalheiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

keywords = [ "lisp", "toy-project", "lustre", "interpreter" ]
description = "Toy project in Rust. A lisp-like interpreter not inteded for serious use."
categories = [ "command-line-interface" ]
license = "MIT"


[dependencies]
rustf8 = { path = "../rustf8" }
anyhow = "1.0.32"
thiserror = "1.0.20"
lazy_static = "1.4.0"
futures = "0.3.6"
tokio = { version= "0.2.22", features = [ "rt-threaded" ] }
